1. new JavaPackage component. Liveness check at sfStart time currently looks for listed resources (working). class lookup not there yet. 2. some changes to the FileIntf interface and usages, a new UriIntf to to get URIs only. 3. No integration with Java component or classloading (yet)